fixing button promo align

--- a/css/app.css
+++ b/css/app.css
@@ -320,6 +320,11 @@ footer {
         flex-direction: column; 
         align-items: center;  
     }
+    .content-2{
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+    }
 }
 
 @media (max-width: 768px) {
@@ -368,9 +373,21 @@ footer {
         flex-direction: column; 
         align-items: center;  
     }
+
+    .content-2{
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+    }
 }
 
 @media (max-width: 480px) {
+    .content-2{
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+    }
+
     .title {
         font-size: 2rem;
     }
